kidiff (2.3.0-1) stable; urgency=medium

  * Added support for adding/removing PCB layers
  * Changed the red/green colors to match text mode diff tools

 -- Salvador Eduardo Tropea <salvador@inti.gob.ar>  Thu, 25 Aug 2022 08:33:51 -0300

kidiff (2.2.0-1) stable; urgency=medium

  * Added multi-page schematic support
  * Added more control for the output name and generated files

 -- Salvador Eduardo Tropea <salvador@inti.gob.ar>  Mon, 24 Aug 2022 11:05:43 -0300

kicad-pcb-diff (2.1.0-1) stable; urgency=medium

  * Added stats diff mode
  * Added alternative support for Ghostscript

 -- Salvador Eduardo Tropea <salvador@inti.gob.ar>  Mon, 15 Aug 2022 18:27:50 -0300

kicad-pcb-diff (2.0.0-1) stable; urgency=medium

  * Added SCH support

 -- Salvador Eduardo Tropea <salvador@inti.gob.ar>  Sun, 14 Aug 2022 13:23:10 -0300

kicad-pcb-diff (1.2.0-1) stable; urgency=medium

  * Added KiCad 6 support

 -- Salvador Eduardo Tropea <salvador@inti.gob.ar>  Sat, 13 Aug 2022 20:40:56 -0300

kicad-pcb-diff (1.1.0-1) testing; urgency=medium

  * Added script to init the repo.

 -- Salvador Eduardo Tropea <salvador@inti.gob.ar>  Tue, 03 Mar 2020 09:17:18 -0300

kicad-pcb-diff (1.0.0-1) unstable; urgency=low

  * Initial release.

 -- Salvador Eduardo Tropea <salvador@inti.gob.ar>  Tue, 03 Mar 2020 07:17:31 -0300